<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2">
    
	<include layout="@layout/camerasdk_actionbar" />


	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" 
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:paddingBottom="@dimen/activity_vertical_margin" >
	    
	    <TextView
	        android:focusableInTouchMode="true"
	        android:focusable="true"
	        android:text="@string/select_mode"
	        android:textSize="16sp"
	        android:textStyle="bold"
	        android:textColor="@android:color/black"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	
	    <RadioGroup
	        android:id="@+id/choice_mode"
	        android:checkedButton="@+id/multi"
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	        <RadioButton
	            android:id="@+id/multi"
	            android:text="@string/mode_multi"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="30dip" />
			<RadioButton
	            android:id="@+id/single"
	            android:text="@string/mode_single"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:layout_marginLeft="30dip" />
	    </RadioGroup>
	
	    
	    <LinearLayout android:layout_marginTop="10dip" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
	        <TextView
		        android:text="@string/max_select_amount"
		        android:textSize="16sp"
		        android:textStyle="bold"
		        android:textColor="@android:color/black"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" />
		
		    <EditText
		        android:id="@+id/request_num"
		        android:hint="@string/hint_default_amount"
		        android:inputType="number"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        android:layout_marginLeft="10dip"/>
	        
	    </LinearLayout>
	    
	    
	
	    <TextView
	        android:layout_marginTop="10dip"
	        android:text="@string/enable_camera"
	        android:textSize="16sp"
	        android:textStyle="bold"
	        android:textColor="@android:color/black"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	
	    <RadioGroup
	        android:id="@+id/show_camera"
	        android:checkedButton="@+id/show"
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	
	        <RadioButton
	            android:id="@+id/show"
	            android:text="@string/yes"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="30dip" />
	        <RadioButton
	            android:id="@+id/no_show"
	            android:text="@string/no"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="30dip" />
	
	    </RadioGroup>
	
	    <TextView
	        android:layout_marginTop="10dip"
	        android:text="@string/enable_croper"
	        android:textSize="16sp"
	        android:textStyle="bold"
	        android:textColor="@android:color/black"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	
	    <RadioGroup
	        android:id="@+id/rg_crop"
	        android:checkedButton="@+id/show"
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	
	        <RadioButton
	            android:id="@+id/crop_yes"
	            android:text="@string/yes"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:layout_marginLeft="30dip"/>
	        <RadioButton
	            android:id="@+id/crop_no"
	            android:text="@string/no"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:layout_marginLeft="30dip"
	            android:checked="true"/>
	
	    </RadioGroup>
	    
	    <TextView
	        android:layout_marginTop="10dip"
	        android:text="@string/enable_filter"
	        android:textSize="16sp"
	        android:textStyle="bold"
	        android:textColor="@android:color/black"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	
	    <RadioGroup
	        android:id="@+id/rg_filter"
	        android:checkedButton="@+id/show"
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	
	        <RadioButton
	            android:id="@+id/filter_yes"
	            android:text="@string/yes"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:layout_marginLeft="30dip"/>
	        <RadioButton
	            android:id="@+id/filter_no"
	            android:text="@string/no"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:layout_marginLeft="30dip"
	            android:checked="true"/>
	
	    </RadioGroup>
	    
	    
	    <Button
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/choose"
	        android:id="@+id/button"/>
	
	 
	
	</LinearLayout>
	
	
	
</LinearLayout>
